Fix text alignment on mobile input fields

--- a/src/scss/_cp-wizard.scss
+++ b/src/scss/_cp-wizard.scss
@@ -14,14 +14,14 @@ svg.wizard.expand-section-btn {
         max-width: 77%;
         min-width: unset;
         width: 29.25rem;
-        height: 40px;
+        height: 39px;
         & + .unit {
           font-size: 1.2em;
           width: 20%;
           max-width: 4em;
           min-width: unset;
           padding: 0;
-          height: 40px;
+          height: 39px;
           line-height: 3.1em;
         }
       }
